# geospatial_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.circleci/: .config.yml  config.yml
charts/: Chart.yaml  values.yaml
data_pipeline/: constants.py  ingest_building.py  utils.py
geoproject/: main.py
geoproject-charts/: Chart.yaml  values.yaml
geoproject-charts/templates/: _helpers.tpl  deployment.yaml  services.yaml
geoproject/alembic/: alembic.ini  env.py
geoproject/alembic/models/: models.py
geoproject/alembic/versions/: 1385d54dbf82_create_table.py  6205ce21172e_added_building_footprints_table.py  a12cda8c108c_create_table.py  c2a099e7f488_added_spatial_data_table.py
geoproject/api/v1/: building_footprints.py  location.py
geoproject/config/: database.py
geoproject/core/: config.py
geoproject/models/: building_footprints.py  locations.py
geoproject/services/: building_footprints.py  locations.py
tests/: conftest.py
tests/api/v1/: conftest.py  test_building_footprints.py  test_locations.py
tests/bdd/: conftest.py  test_building_footprints_bdd.py  test_locations_bdd.py
tests/bdd/features/: building_footprints.feature  locations.feature
tests/data_pipeline/: test_ingest_building.py
