[project]
name = "geoproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Andres Hernandez",email = "andresmauricio.hernandezcamacho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
