[project]
name = "geoproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Andres Hernandez",email = "andresmauricio.hernandezcamacho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "duckdb (>=1.4.2,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pydantic (>=2.12.4,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "types-sqlalchemy (>=1.4.53.38,<2.0.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fsspec (>=2025.10.0,<2026.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "country-converter (>=1.3.2,<2.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

mypy_path = "geoproject"

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.mypy-geopandas]
ignore_errors = true

[tool.mypy-shapely]
ignore_errors = true

[tool.pytest.ini_options]
bdd_features_base_dir = "tests/bdd/features/"
